- Major update (rewrite UI architecture, playbackViewModel) - block based ADFilter