@@ -37,16 +37,10 @@ public class LiveSetting {
     }
 
     public static int getScale() {
-        // 📥 改用 Java 17 及舊版本 Android 盒完美相容的 max/min 巢狀組合
-        int currentValue = Prefers.getInt("scale_live", PlayerSetting.getScale());
-        return Math.max(PlayerSetting.MIN_SCALE, Math.min(PlayerSetting.MAX_SCALE, currentValue));
-
-        //return Math.clamp(Prefers.getInt("scale_live", PlayerSetting.getScale()), PlayerSetting.MIN_SCALE, PlayerSetting.MAX_SCALE);
+        return Math.min(Math.max(Prefers.getInt("scale_live", PlayerSetting.getScale()), PlayerSetting.MIN_SCALE), PlayerSetting.MAX_SCALE);
     }
 
     public static void putScale(int scale) {
-        // 📥 改用 Java 17 完美相容的上下限限制寫法
-        Prefers.put("scale_live", Math.max(PlayerSetting.MIN_SCALE, Math.min(PlayerSetting.MAX_SCALE, scale)));
+        Prefers.put("scale_live", Math.min(Math.max(scale, PlayerSetting.MIN_SCALE), PlayerSetting.MAX_SCALE));
     }
-
 }
